--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+
+html {
+  font-family: 'Titillium Web', sans-serif;
+}
+
 .center {
   position: absolute;
   left: 50%;
@@ -28,6 +34,7 @@ h1 {
   padding: 20px;
   box-shadow: 0px 0px 18px #888888;
   border-radius: 10px;
+  border: solid 2px blueviolet;
 }
 
 .group {
@@ -154,15 +161,14 @@ input:focus ~ .highlight {
 
   overflow: hidden;
 
-  border-width: 0;
-  outline: none;
-  border-radius: 20px;
+  border-radius: 40px;
   
-  border-color: blueviolet;
-  border-width: 3px;
   color: blueviolet;
   
   transition: background-color .3s;
+  border: solid 3px blueviolet;
+
+  font-weight: bold;
 }
 
 .btn:hover, .btn:focus {
@@ -176,7 +182,7 @@ input:focus ~ .highlight {
 
 .btn span {
   display: block;
-  padding: 12px 24px;
+  padding: 7px 24px;
 }
 
 .btn:before {
