--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,7 +27,6 @@ h1 {
   position: absolute;
   left: 50%;
   transform: translate(-50%, -0%);
-  padding: 10px;
 }
 
 .vcenter {
@@ -38,7 +37,7 @@ h1 {
 }
 
 .card {
-  width: 500px;
+  min-width: 500px;
   height: 300px;
   padding: 20px;
   box-shadow: 0px 0px 18px #888888;
@@ -221,4 +220,21 @@ input:focus ~ .highlight {
   padding-top: 120%;
   
   transition: width .2s ease-out, padding-top .2s ease-out;
+}
+
+.textarea {
+  border-radius: 10px;
+  padding: 10px;
+  position: absolute;
+  width: 80%;
+  height: 18%;
+  border: solid 2px blueviolet;
+}
+.textarea > textarea {
+  border: solid 0px black;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  resize: none;
 }
