--- a/views/moo.html
+++ b/views/moo.html
@@ -5,7 +5,7 @@
     <style>
       .moo {
         width: 80%;
-        height: 100px;
+        min-height: 50px;
         padding: 10px;
         border-radius: 10px;
         border: solid 2px gray;
