--- a/views/index.pug
+++ b/views/index.pug
@@ -19,8 +19,9 @@ head
         span.bar
         label Email
     a(href='#')
-      .btn.vcenter(style='top: 60%')
-        input( id="btn_next" type='submit', value='Log In')
+      div 
+        .btn.vcenter(style='top: 60%')
+          input( id="btn_next" type='submit', value='Log In')
     script(src="/js/functions.js", type="application/javascript")
     script(src="//typingdna.com/scripts/typingdna.js?v2.8")
     script.
