--- a/views/moo.html
+++ b/views/moo.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../public/stylesheets/style.css" />
-    <style>
-      .moo {
-        width: 80%;
-        min-height: 50px;
-        padding: 10px;
-        border-radius: 10px;
-        border: solid 2px gray;
-      }
-    </style>
+    <link rel="stylesheet" href="../public/css/moo_style.css" />
   </head>
   <body>
     <div class="safearea vcenter">
       <div><h1>Witter</h1></div>
       <form>
-        <div class="textarea vcenter" style="top: 20%">
+        <div class="textarea vcenter">
           <textarea></textarea>
         </div>
         <a href="#" onclick="next()">
-          <div class="btn vcenter" style="top: 42%">
+          <div class="btn vcenter">
             <span>Moo</span>
           </div>
         </a>
       </form>
-      <div><h2 style="top: 60%">Your Moos</h2></div>
-      <div class="moo vcenter" style="top: 67%"><span style="color: gray;">time</span> <p>Your moo here</p>
-    </div>
+      <div><h2>Your Moos</h2></div>
+      <!-- When no moo present -->
+      <div class="vcenter" style="margin-top: 70px;">
+        <span style="color: gray; font-size: large;">No moos till now</span>
+      </div>
+      <!-- till here -->
+
+
+
+      <!-- Moo starts here -->
+      <div class="moo vcenter">
+        <span>time</span>
+        <p>Your moo here</p>
+      </div>
+      <!-- Moo ends here -->
     </div>
   </body>
 </html>
