--- a/views/enroll.pug
+++ b/views/enroll.pug
@@ -15,13 +15,17 @@ html
   div.container(style={"padding":"0"})
     include ./flash
     if(!finish)
-        .card.center
-            div.step(id="collect", style={"display":"inline", "opacity":1})
+        div.step(id="collect", style={"display":"inline", "opacity":1})
+            .card.center
                 p
                     if step ===  1
-                        b Enrolling new user step 1 of 2: Please type the text below
+                        b 1 of 2
+                        br
+                        b Please type the text below
                     else
-                        b Enrolling new user step 2/2: Please type one more text
+                        b 2/2
+                        br
+                        b Please type one more text
                 p
                     span.highlighted(id="pAH")
                     span(id="pA")
@@ -39,8 +43,8 @@ html
                     div.btn.vcenter(style={"top":"70%"})
                         input.btn-colors.btn-s.disabled(value="Next", id="btn_next", type="submit")
     else
-        .card.center
-            div.step(id="finish", style={"display":"inline", "opacity":1})
+        div.step(id="finish", style={"display":"inline", "opacity":1})
+            .card.center
                 .vcenter(style={"top":"100px"})
                     h3 Done
                 div.message.vcenter(style={"top":"170px"})
@@ -49,8 +53,8 @@ html
                     input(value="Start again", type="submit", onclick="restart()")
     //Loading
     //- div.step(id="step_loading")
-    //-     br
-    //-     p Loading...
+    //-     .card.center
+    //-         p Please wait while we prepare your enrollment text
     if(!finish)
       script.
           tdna = new TypingDNA(); /** creates an instance of the TypingDNA typing pattern recording class */
@@ -80,7 +84,7 @@ html
               if(!form) {
                   return false;
               }
-              if(fastCompareTexts(document.getElementById("inputtextbox").value, currentQuote) > 0.7) {
+                if(fastCompareTexts(document.getElementById("inputtextbox").value, currentQuote) > 0.7) {
                   /** at least 70% of the words should be typed correctly */
                   var tp = tdna.getTypingPattern({type:1, extended:true, length:300});
                   if(tdna.isMobile() && TypingDNA.checkMobileValidity(tp) < 0.7) {
