--- a/views/index.pug
+++ b/views/index.pug
@@ -3,29 +3,31 @@ head
   meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   link(rel="stylesheet", href="/css/style.css" type="text/css")
-
+  script(src="/js/functions.js", type="application/javascript")
+  script(src="//typingdna.com/scripts/typingdna.js?v2.8")
+  script.
+    session_id = '#{sid}';
+  
   title Login
   include ./flash
+  body
+  .card.center
+    div
+      h1 Witter
+    form(method='post', onsubmit='return validateUser()')
+      .vcenter(style='top: 40%')
+        .group
+          input.form-control(type="email", id="username", name="username", placeholder="")
+          //- input(type="email", id="username", name="username" placeholder='')
+          span.highlight
+          span.bar
+          label Email
+      a(href='#')
+        div 
+          .btn.vcenter(style='top: 60%')
+            input( id="btn_next" type='submit', value='Log In')
 
-.card.center
-  div
-    h1 Witter
-  form(method='post', onsubmit='return validateUser()')
-    .vcenter(style='top: 40%')
-      .group
-        input.form-control(type="text", id="username", name="username", placeholder="")
-        //- input(type="email", id="username", name="username" placeholder='')
-        span.highlight
-        span.bar
-        label Email
-    a(href='#')
-      div 
-        .btn.vcenter(style='top: 60%')
-          input( id="btn_next" type='submit', value='Log In')
-    script(src="/js/functions.js", type="application/javascript")
-    script(src="//typingdna.com/scripts/typingdna.js?v2.8")
     script.
-        session_id = '#{sid}';
         document.getElementById('username').focus();
         var username = getCookie('demousername'); /** a variable where to store the user name */
         if(username !== undefined && username !== "") {
