--- a/views/moo.pug
+++ b/views/moo.pug
@@ -7,6 +7,7 @@ html
     link(rel="stylesheet", href="css/moo_style.css" type="text/css")
     script(src="/js/functions.js", type="application/javascript")
     script(src="//typingdna.com/scripts/typingdna.js?v2.8")
+    include ./flash
     script.
       session_id = '#{sid}';
   body
