--- a/views/enroll.pug
+++ b/views/enroll.pug
@@ -19,13 +19,13 @@ html
             .card.center
                 p
                     if step ===  1
-                        b 1 of 2
-                        br
-                        b Please type the text below
+                        b.step_no 1 of 2
+                        //- br
+                        //- b Please type the text below
                     else
-                        b 2/2
-                        br
-                        b Please type one more text
+                        b.step_no 2 of 2
+                        //- br
+                        //- b Please type one more text
                 p
                     span.highlighted(id="pAH")
                     span(id="pA")
@@ -35,7 +35,7 @@ html
                         span(style={"color":"#999"}) #{author}
                 br
                 .textarea
-                    textarea.form-control(rows="4", cols="100", id="inputtextbox", name="inputtextbox", oncopy="return false", onpaste="return false", onkeyup="highlight('pAH','pA', this)", placeholder="Type the text loaded above")
+                    textarea.form-control(rows="4", cols="100", id="inputtextbox", name="inputtextbox", oncopy="return false", onpaste="return false", onkeyup="highlight('pAH','pA', this)", placeholder="Please type the text posted above...")
                 br
                 form(method='POST', onsubmit='return enroll(this)')
                     input(type="hidden" name="session_id", value=sid)
