Make some style changes for finsl page

--- a/views/enroll.pug
+++ b/views/enroll.pug
@@ -46,7 +46,7 @@ html
                 div.message.vcenter(style={"top":"170px"})
                     p The user is now enrolled
                 div.btn.vcenter(style={"top":"260px"})
-                    input(value="Start again", type="submit", onclick="restart()")
+                    input(value="Login Again", type="submit", onclick="restart()")
     //Loading
     //- div.step(id="step_loading")
     //-     br
