--- a/views/final.pug
+++ b/views/final.pug
@@ -7,7 +7,7 @@ head
   script(src="//typingdna.com/scripts/typingdna.js?v2.8")
   script.
     session_id = '#{sid}';
-  title Login
+  title Witter
   include ./flash
   body
   div.container(style={"padding":"0"})
