--- a/views/enroll.pug
+++ b/views/enroll.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title Witter | Enroll
     meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel="stylesheet", href="/css/style.css" type="text/css")
