--- a/views/moo.pug
+++ b/views/moo.pug
@@ -4,6 +4,7 @@ html
     title Witter
     meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
+    link(rel="stylesheet", href="css/style.css" type="text/css")
     link(rel="stylesheet", href="css/moo_style.css" type="text/css")
     script(src="/js/functions.js", type="application/javascript")
     script(src="//typingdna.com/scripts/typingdna.js?v2.8")
