--- a/views/final.pug
+++ b/views/final.pug
@@ -2,7 +2,7 @@ doctype html
 head
   meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  link(rel="stylesheet", href="/css/final.css" type="text/css")
+  link(rel="stylesheet", href="/css/final_style.css" type="text/css")
   script(src="/js/functions.js", type="application/javascript")
   script(src="//typingdna.com/scripts/typingdna.js?v2.8")
   script.
