--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ head
   script(src="//typingdna.com/scripts/typingdna.js?v2.8")
   script.
     session_id = '#{sid}';
-  title Witter | Login
+  title Login
   include ./flash
   body
   div.container(style={"padding":"0"})
