--- a/views/final.pug
+++ b/views/final.pug
@@ -9,28 +9,21 @@ head
     session_id = '#{sid}';
   title Login
   include ./flash
-  body(onload= "draw();")
+  body
   div.container(style={"padding":"0"})
     div.step(id="step_username", style={"display":"inline", "opacity": "1"})
-        if loggedIn
-            .conf-modal.center.success
-                .title-icon
-                    img(src='http://jimy.co/res/icon-success.jpg')
-                .title-text
-                    h1 Your Moo as been posted!
-                p Thanks for using witter! 
-                .modal-footer
-                    .conf-but.green(onclick="restart();" role="button") Start again
-        else
-            .conf-modal.center.failure
-                .title-icon
-                    img(src='/assets/Webp.net-resizeimage.png')
-                .title-text
-                    h1 You've been logged out
-                p Your typing pattern didn't match the enrolled pattern
-                .modal-footer
-                    .conf-but.red(onclick="restart();" role="button") Start again
-
+      .card.center
+        p
+            if loggedIn
+                h3 Your Moo as been posted!
+                br
+                p Thanks for using witter!
+            else
+                h3 You've been logged out.
+                br       
+                p Your typing pattern didn't match the enrolled pattern.
+        div.btn.vcenter(style={"top":"200px"})
+            input(value="Login Again", type="submit", onclick="restart()")
   script.
       (function() {
           if(!isIframe()) {
