final changes done

--- a/views/moo.pug
+++ b/views/moo.pug
@@ -29,20 +29,12 @@ html
       textarea
     input(type="hidden" name="session_id", value=sid)
     input(type="hidden" name="tp")
+    small please enter more than 120 characters.
+
     a(href='#')
       button.btn.vcenter(name ="moo_bar" role ="button" type="submit")
         span Moo
-//-   div
-//-     h2 Your Moos
-//-     // When no moo present
-//-     .vcenter(style='margin-top: 70px;')
-//-         span(style='color: gray; font-size: large;') No moos till now
-//-             // till here
-//-             // Moo starts here
-//-         .moo.vcenter
-//-             #moo_list
 
-    // Moo ends here
 
 
 script.
