--- a/public/css/moo_style.css
+++ b/public/css/moo_style.css
@@ -262,7 +262,7 @@ input:focus ~ .highlight {
   width: 100%;
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100px;
   resize: none;
   font-size: large;
 }
