--- a/views/moo.pug
+++ b/views/moo.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title Witter
     meta(http-equiv="Content-Type", content="text/html; charset=UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel="stylesheet", href="css/style.css" type="text/css")
@@ -29,7 +29,7 @@ html
       textarea
     input(type="hidden" name="session_id", value=sid)
     input(type="hidden" name="tp")
-    small please enter more than 120 characters.
+    small Please enter more than 120 characters.
 
     a(href='#')
       button.btn.vcenter(name ="moo_bar" role ="button" type="submit")
